syntax = "proto3";
package targabay.protos.service;
option go_package = "targabay/protos/service_pb";

import "types/common.proto";
import "types/image.proto";

service ImageService {
    rpc GenerateSignedUrl(GenerateSignedUrlRequest) returns (GenerateSignedUrlResponse);
    rpc DeleteS3Images(DeleteS3ImagesRequest) returns (EmptyResponse);
}